--- a/eloge-portfolio/package.json
+++ b/eloge-portfolio/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lazysizes": "^5.3.2",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
