--- a/eloge-portfolio/package.json
+++ b/eloge-portfolio/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.3.31",
     "lazysizes": "^5.3.2",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.13.0"
   },
   "devDependencies": {
     "eslint": "^8",
