--- a/eloge-portfolio/package.json
+++ b/eloge-portfolio/package.json
@@ -12,7 +12,7 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.3.31",
     "lazysizes": "^5.3.2",
-    "next": "14.2.7",
+    "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
